add product page / config eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     ],
     "react/prop-types": "off",
     "import/no-extraneous-dependencies": "off",
+    "import/prefer-default-export":"off",
     "default-param-last": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
